estilos a los putos de ordenar

--- a/tecolotl-web/src/main/webapp/alumno/mindmap/1.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/1.xhtml
@@ -81,7 +81,7 @@
                                 <span class=" uk-text-uppercase">THE 5 W's CHART</span>
                         </div>
                         <h:panelGroup layout="block">
-                            <h:graphicImage library="img" name="/alumno/pop-art/boton-finished.svg" styleClass="movimiento1 finalizado1" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"/>
+                            <h:graphicImage library="img" name="/alumno/pop-art/boton-finished.svg" styleClass="mov1 fin1" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"/>
                            <!-- <span>Respondido</span>-->
                         </h:panelGroup>
                         <h:form class="uk-form-stacked" id="formulario-mapa-mental">
