--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -8,6 +8,7 @@
       
 <h:head>
 	<title>Esquadron</title>
+	<meta name="google-site-verification" content="DLGw7JmFbDOC2lHAxcYSXxNJuYlID8QR6KrnicJ0oKI" />
 </h:head>
 <h:body>
 	<h:link value="Administracion" outcome="/administracion/dashboard.xhtml"/><br/>
