--- a/tecolotl-web/src/main/webapp/alumno/mindmap/8.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/8.xhtml
@@ -83,8 +83,8 @@
                 <div class="imagen-who uk-visible@s">
                     <h:graphicImage library="img" name="mounstro/who.svg" />
                 </div>
-                <h:form class="uk-form-stacked-movil">
-                <div class="caja-capas uk-position-relative uk-visible@s">
+                <h:form class="uk-form-stacked-movil uk-visible@s">
+                <div class="caja-capas uk-position-relative">
                     <div class="imagen-hamburguesa  ">
                         <h:graphicImage library="img" name="/alumno/hamburguesa.svg"/>
                     </div>
@@ -133,13 +133,18 @@
                                 <f:validateRequired/>
                             </h:inputTextarea>
                             <h:message for="Conclusion" styleClass=""/>
+
+
                         </div>
+
+
                     </div>
                     <h:commandButton id="boton-enviar-mapa-mental-escritorio"
                                      value="enviar"
                                      rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                      action="#{mapaMentalControlador.respondeMapaMental}"
                                      styleClass="boton-enviar boton-gral8"/>
+
                 </h:form>
                 </div>
 
@@ -195,7 +200,8 @@
                             <h:commandButton id="boton-enviar-mapa-mental-movil"
                                              value="#{boton['submit']}"
                                              rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                             action="#{mapaMentalControlador.respondeMapaMental}"/>
+                                             action="#{mapaMentalControlador.respondeMapaMental}"
+                                             styleClass="boton-enviar boton-gral8"/>
                         </div>
                     </h:form>
                 </div>
